--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,35 @@
+blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+Faker==37.4.0
+Flask==3.1.1
+flask-cors==6.0.0
+Flask-JWT-Extended==4.7.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.3
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+ldap3==2.9.1
+MarkupSafe==3.0.2
+numpy==2.3.0
+pandas==2.3.0
+pyasn1==0.6.1
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.3
+scikit-learn==1.7.0
+scipy==1.15.3
+six==1.17.0
+SQLAlchemy==2.0.41
+threadpoolctl==3.6.0
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.4.0
+Werkzeug==3.1.3
 
